--- a/packages/vue-translate/package.json
+++ b/packages/vue-translate/package.json
@@ -37,12 +37,13 @@
     "yaml": "^2.7.1"
   },
   "devDependencies": {
+    "@vitejs/plugin-vue": "^5.2.3",
     "@vitest/coverage-v8": "^0.34.0",
+    "@vue/test-utils": "^2.4.0",
     "jsdom": "^23.0.1",
     "tsup": "^7.2.0",
     "typescript": "^5.1.3",
     "vitest": "^0.34.0",
-    "@vue/test-utils": "^2.4.0",
     "vue": "^3.0.0"
   }
 }
