--- a/example/package.json
+++ b/example/package.json
@@ -10,9 +10,9 @@
     "dev:source": "vite --force"
   },
   "dependencies": {
-    "unplugin-vue-translate": "file:../packages/unplugin-vue-translate",
-    "vue": "^3.5.13",
-    "vue-translate": "file:../packages/vue-translate"
+    "@hakuna/unplugin-vue-translate": "file:../packages/unplugin-vue-translate",
+    "@hakuna/vue-translate": "file:../packages/vue-translate",
+    "vue": "^3.5.13"
   },
   "devDependencies": {
     "@types/node": "^20.10.0",
