--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -32,7 +32,7 @@ jobs:
           npx tsc --noEmit
           npm run build
           npm run test
-          npm version ${{ github.event.release.tag_name }} --no-git-tag-version
+          npm version ${{ github.event.release.tag_name }} --no-git-tag-version --allow-same-version
           npm pkg set name="${{ matrix.package.npm_name }}"
           npm publish --access public
         env:
