--- a/packages/unplugin-vue-translate/package.json
+++ b/packages/unplugin-vue-translate/package.json
@@ -50,16 +50,17 @@
   },
   "dependencies": {
     "@rollup/pluginutils": "^5.0.2",
+    "magic-string": "^0.30.17",
     "unplugin": "^2.3.2",
     "yaml": "^2.7.1"
   },
   "devDependencies": {
-    "vite": "^6.0.0",
     "@vitejs/plugin-vue": "^5.2.3",
     "@vitest/coverage-v8": "^3.1.2",
     "@vue/compiler-sfc": "^3.3.4",
     "tsup": "^8.4.0",
     "typescript": "^5.1.3",
+    "vite": "^6.0.0",
     "vitest": "^3.1.2",
     "vue": "^3.3.4",
     "vue-loader": "^17.2.2",
